<resources>
    <string name="app_name">Places</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contrase;a</string>
    <string name="title_activity_principal_content">principal_Content</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_place">Places</string>
    <string name="menu_gallery">Mapa</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_name">Name of the place</string>
    <string name="msg_email">Email (correo@xxx.xxx)</string>
    <string name="msg_cellphone">Telefono (9999-9999)</string>
    <string name="msg_web">Sitio Web </string>
    <string name="bt_add_place">Add Place</string>
    <string name="bt_update_place">Update Place</string>
    <string name="msg_place_added">Place Added</string>
    <string name="msg_place_updated">Place Updated</string>
    <string name="msg_data">Faltan Datos</string>


    <string name="bt_delete_place">Delete place</string>
    <string name="msg_deleted_place">Place Deleted</string>
    <string name="msg_question">Are you sure you want to eliminate this place??</string>
    <string name="msg_yes">YES</string>
    <string name="msg_no">NO</string>


    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver lugar en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>

    <string name="error">Error</string>
    <string name="msgEscucharAudio">Escuchar nota de audio</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="graba_pausa">Graba o pausa grabación</string>
    <string name="todo">Luego...</string>
    <string name="default_web_cliente_id_r" translatable="false">162418292660-8usjbcmoahbme31mcamfkoom5opt9s1c.apps.googleusercontent.com</string>

    <string name="google_map_key_api" translatable="false">AIzaSyCA_zkvjzl3r9bok4FyoZ__IXsorvLLPHY</string>




</resources>